# python-loguru-sample

./: .pre-commit-config.yaml  README.md  log_config.py  pyproject.toml
tests/: conftest.py  test_add_filter.py  test_add_level.py  test_contextualize.py  test_loguru.py
