[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.poetry]
name = "loguru-sample"
version = "0.1.0"
description = ""
authors = ["liyan <twotwo.li@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

